--- a/index.html
+++ b/index.html
@@ -45,10 +45,18 @@
                                 <img src="https://static-cdn.jtvnw.net/ttv-boxart/32399_IGDB-188x250.jpg" alt="Imagem do jogo League of Legends">
                             </a>
                         </li>
+
                         <li>
                             <a target="_blank" 
                                href="https://www.twitch.tv/directory/game/Teamfight%20Tactics">
                                 <img src="https://static-cdn.jtvnw.net/ttv-boxart/513143-188x250.jpg" alt="Imagem do jogo League of Legends">
+                            </a>
+                        </li>
+
+                        <li>
+                            <a target="_blank" 
+                               href="https://www.twitch.tv/directory/game/Just%20Chatting">
+                                <img src="https://static-cdn.jtvnw.net/ttv-boxart/509658-188x250.jpg" alt="Imagem do jogo League of Legends">
                             </a>
                         </li>
                     </ul>
